# davinci-resolve-studio-mod-suite

./: .version  CMakeLists.txt  README.md  requirements.txt  setup.py
davinci_resolve_studio_mod_suite/: __init__.py  cli.py  patcher.py  resolve_mod.py
include/: license_manager.h  resolve_api.h
include/utils/: logger.h
src/: license_manager.cpp  main.cpp  resolve_api.cpp
src/utils/: logger.cpp
tests/: test_license.cpp  test_resolve_mod.py
